fixed alignment issue in notifications tray

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -131,7 +131,7 @@ a.nav-link:hover {
   display: flex;
 }
 
-.notif-menu-items {
+.notif-items {
   width: 100%;
   overflow: auto;
   padding: 10px;
